fixed nav/header css overlap on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -168,7 +168,7 @@ html, body {
     }
 
     .all-items{
-        margin-top: 10%;
+        margin-top: 13%;
     }
 }
 
